fix: spacing

--- a/styles.css
+++ b/styles.css
@@ -63,16 +63,16 @@ img {
   backdrop-filter: blur(2px);
 }
 
-.main-content h1 {
+.info-card h1 {
   font-weight: 500;
   margin-bottom: 8px;
 }
 
-.main-content h2 {
+.info-card h2 {
   margin-bottom: 8px;
 }
 
-.main-content h3 {
+.info-card h3 {
   font-weight: 400;
   margin-bottom: 8px;
 }
